--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   grid-template-columns: 15vw 1fr;
 }
 
-sidebar {
+nav {
   grid-column: 1/2;
   background: navy;
   color: #fff;
@@ -14,7 +14,7 @@ sidebar {
   flex-direction: column;
 }
 
-sidebar a {
+nav a {
   margin-top: 20px;
   color: #fff;
   text-decoration: none;
