added 3 charts with standart data

--- a/src/components/Charts/Charts.css
+++ b/src/components/Charts/Charts.css
@@ -1,4 +1,20 @@
+.charts{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
 .line-chart{
     max-width: 95%;
     margin: 0 auto;
+}
+
+.bar-chart{
+    max-width: 15%;
+    margin: 5%;
+}
+
+.doughnut-chart{
+    max-width: 30%;
+    margin-left: 10%;
 }
