--- a/src/components/Charts/Charts.css
+++ b/src/components/Charts/Charts.css
@@ -7,14 +7,27 @@
 .line-chart{
     max-width: 95%;
     margin: 0 auto;
+    width: 99%;
+    height: 400px;
 }
 
 .bar-chart{
     max-width: 15%;
     margin: 5%;
+    width: 100%;
+    height: 400px;
 }
 
 .doughnut-chart{
     max-width: 30%;
     margin-left: 10%;
+    width: 100%;
+    height: 400px;
+}
+
+.btn-wrapper{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 4%;
+    margin-top: 1rem;
 }
