user info db final

--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -12,3 +12,21 @@
   height: 250px;
   background: yellowgreen;
 }
+
+.avatar {
+  height: 150px;
+  width: 150px;
+  margin: 0 auto;
+}
+
+.avatar img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.limit {
+  margin-right: 20px;
+  margin-bottom: 130px;
+}
