--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -19,15 +19,22 @@
 	border:inherit;
 	 content: '👇';
 	 display: inline-block;
-	 margin-left: 1em;
+	 margin-left: 0.5em;
 	 }
 
 .table-direct button.descending::after {
 	 content: '☝️';
 	 display: inline-block;
-	 margin-left: 1em;
+	 margin-left: 0.5em;
 	 }
 
  .MuiTableCell-root {
-	 min-width: 200px;
+	 min-width: 130px;
+	 font-weight: 700;
+	 }
+ .avatar {
+	 vertical-align: middle;
+	 width: 50px;
+	 height: 50px;
+	 border-radius: 50%;
 	 }
