--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,5 @@
-.App {
+.app {
   text-align: center;
   display: grid;
-  grid-template-columns: 15vw 1fr;
-}
-/* 
-nav {
-  grid-column: 1/2;
-  background: navy;
-  color: #fff;
-  position: sticky;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}*/
-
-nav a {
-  /* margin-top: 20px; */
-  color: #2b2b2b;
-  text-decoration: none;
+  grid-template-columns: 300px 1fr;
 }
