--- a/src/components/Common/Header/Header.module.css
+++ b/src/components/Common/Header/Header.module.css
@@ -5,7 +5,7 @@
   margin-bottom: 50px;
   background: linear-gradient(20deg, #00aa66, #00ee55);
   border-radius: 25px;
-  height: 275px;
+  height: 30vh;
   box-shadow: 10px 10px 20px -7px rgba(0, 0, 0);
   color: #fff;
 }
