--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -5,7 +5,9 @@
 	/*}*/
 
  .table-direct>button {
-	 border: none;
+	 /*border: none;*/
+	 border: 2px solid green;
+	 border-radius: 3px;
 	 font-family: inherit;
 	 font-weight: 700;
 	 font-size: inherit;
@@ -16,7 +18,7 @@
 	 }
 
 .table-direct>button.ascending::after {
-	border:inherit;
+	/*border:inherit;*/
 	 content: '👇';
 	 display: inline-block;
 	 margin-left: 0.5em;
