--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -13,6 +13,7 @@
   height: 150px;
   width: 150px;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .avatar img {
@@ -21,6 +22,7 @@
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 10px 10px 15px -7px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .main_inner {
@@ -29,7 +31,7 @@
   box-shadow: 4px 4px 15px -0px rgba(0, 0, 0, 0.3);
 }
 
-.main_inner h3 + span{
+.main_inner h3 + span {
   margin-right: 10px;
 }
 
